add link to html and readme

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,12 +14,14 @@
 <body>
     <h1>Sending email form</h1>
     <h2>Author: <a href="https://github.com/Iwaniukooo11" target="_blank">Mateusz Iwaniuk</a> </h2>
-    <p>A simple mail sender. Project is described in my <a href="" target='_blank'>dev.to article</a></p>
-    
+    <p>A simple mail sender. Project is described in my <a
+            href="https://dev.to/iwaniukooo11/send-e-mails-directly-from-front-end-with-js-5d7d" target='_blank'>dev.to
+            article</a></p>
+
     <form class="form">
         <input name='name' type="text" placeholder="Your name..." class="form__input" />
-        <input name='topic' type="text" placeholder="Topic..." class="form__input"  />
-        <textarea name='message' type="text" placeholder="Your Message..." class="form__input"  ></textarea>
+        <input name='topic' type="text" placeholder="Topic..." class="form__input" />
+        <textarea name='message' type="text" placeholder="Your Message..." class="form__input"></textarea>
 
         <input type="submit" value="send" class="form__input form__input--button">
     </form>
